[项目重构与新功能实现]: 对项目进行了重构，并实现了一些新功能。
- 将应用程序名称从 "PictrueTool" 改为 "QGraphicsTool"，以更准确地反映其功能。
- 增加了对自定义线项（CustomLineItem）的支持，包括 `customlineitem.cc` 和 `customlineitem.hpp` 文件。
- 为图形线条项（GraphicsLineItem）进行了一些调整，包括代码格式和包含头文件的顺序。
- 更新了 `BasicGraphicsItem` 的构造函数，增加了对 `QPen` 的设置，并对鼠标悬停事件进行了微调。
- 在 `mainwindow` 项目中添加了新的源文件和头文件，包括 `subtitlsplicingwidget.cc`、`subtitlsplicingwidget.hpp`、`sectionalsubtitlesview.cc` 和 `sectionalsubtitlesview.hpp`。
- 新增了字幕拼接功能，通过 `SubtitlSplicingWidget` 提供了打开图像、生成拼接图像和设置用户界面的接口。
- 引入了 `SectionalSubtitlesView` 类，用于处理和展示字幕的分段。
- 对主窗口类（MainWindow）进行了更新，增加了对新功能的集成和支持。

--- a/mainwindow/CMakeLists.txt
+++ b/mainwindow/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(PROJECT_SOURCES
+        customlineitem.cc customlineitem.hpp
         drawwidget.cpp drawwidget.h
         imagelistmodel.cpp imagelistmodel.h
         imageviewer.cpp imageviewer.h
@@ -6,7 +7,9 @@ set(PROJECT_SOURCES
         mainwindow.cpp mainwindow.h
         maskdialog.cpp maskdialog.h
         rounddialog.cc rounddialog.hpp
-        stretchparamssettingdailog.cc stretchparamssettingdailog.hpp)
+        sectionalsubtitlesview.cc sectionalsubtitlesview.hpp
+        stretchparamssettingdailog.cc stretchparamssettingdailog.hpp
+        subtitlsplicingwidget.cc subtitlsplicingwidget.hpp)
 
 if (CMAKE_HOST_WIN32)
   add_library(mainwindow SHARED ${PROJECT_SOURCES} ${SOURCES})
