[图形界面和功能增强]: 主要针对图形界面和相关功能进行了一系列的增强和改进。
- 添加了新的 `GraphicsTextItem` 类以支持文本项的图形显示。
- 更新了 `BasicGraphicsItem`，去除了不再使用的 `QMenu` 相关成员和方法。
- 修改了 `CMakeLists.txt` 文件，添加了新的源文件和头文件，以整合新功能。
- 为 `ImageView` 类引入了 `DrawScene`，增强了绘图和文本编辑功能。
- 新增 `DrawScene` 类，提供了图形场景中的文本交互和管理。
- 增强了 `DrawWidget`，增加了字体样式选择和颜色设置功能。
- 更新了主窗口 `mainwindow`，整合了新的绘图和文本编辑控件。

[子图处理和列表项视图改进]: 对子图处理功能和列表项视图进行了改进，提升了用户体验。

- `SectionalSubtitlesView` 现在基于 `ListItemView` 进行构建，优化了继承结构。
- 优化了 `SectionalSubtitlesView` 中线条的绘制和调整逻辑，提高了操作的灵活性。
- 调整 `ListItemView`，增加了图像加载和显示功能，改善了性能。

[辅助功能和输入验证]: 引入了辅助功能和输入验证机制，增强了应用的健壮性。

- 新增 `IntValidator` 类，提供了定制化的输入验证逻辑，确保输入数据的有效性。
- 更新了相关对话框和组件，整合了新的验证机制，避免了无效或不合理的输入。

--- a/graphics/CMakeLists.txt
+++ b/graphics/CMakeLists.txt
@@ -10,6 +10,7 @@ set(PROJECT_SOURCES
         graphicsrectitem.cpp graphicsrectitem.h
         graphicsringitem.cpp graphicsringitem.h
         graphicsrotatedrectitem.cpp graphicsrotatedrectitem.h
+        graphicstextitem.cc graphicstextitem.hpp
         imageview.cpp imageview.h)
 
 if (CMAKE_HOST_WIN32)
