[引入截图和GIF录制功能]: 此提交引入了新的截图和GIF录制功能，并对项目进行了以下更新：
1. **新增截图功能**:
   - 创建了`CaptureWidget`类，提供了截图捕获和编辑界面。
   - 在`mainwindow`中添加了截图功能的入口，允许用户通过菜单栏启动截图工具。

2. **新增GIF录制功能**:
   - 实现了`RecordWidget`类，提供了GIF录制设置和控制界面。
   - 在`mainwindow`中添加了GIF录制功能的入口，允许用户通过菜单栏启动GIF录制工具。

3. **更新`DrawWidget`类**:
   - 添加了新按钮和菜单，允许用户创建新的画布或加载图像。
   - 增加了保存绘制结果的功能。

4. **引入`SelectionWidget`类**:
   - 允许用户在截图或GIF录制时选择和调整捕获区域。

5. **优化`Utils`类**:
   - 添加了`desktopGeometry`和`grabFullWindow`函数，用于获取整个桌面的几何信息和截图。

6. **调整项目文件结构**:
   - 在`CMakeLists.txt`和`mainwindow.pro`中添加了新引入的源文件和头文件，确保了项目的构建系统能够正确编译新添加的代码。

7. **更新文档和资源文件**:
   - 将文档和示例图片移动到`doc`目录下，并在`README.md`中更新了相关链接。

8. **其他改进**:
   - 对`graphics`模块中的`curorFromAngle`函数进行了代码风格调整。

--- a/mainwindow/CMakeLists.txt
+++ b/mainwindow/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(PROJECT_SOURCES
+        capturewidget.cc capturewidget.hpp
         customlineitem.cc customlineitem.hpp
         drawscene.cc drawscene.hpp
         drawwidget.cpp drawwidget.h
@@ -9,8 +10,10 @@ set(PROJECT_SOURCES
         mainwindow_global.h
         mainwindow.cpp mainwindow.h
         maskdialog.cpp maskdialog.h
+        recordwidget.cc recordwidget.hpp
         rounddialog.cc rounddialog.hpp
         sectionalsubtitlesview.cc sectionalsubtitlesview.hpp
+        selectionwidget.cc selectionwidget.hpp
         stretchparamssettingdailog.cc stretchparamssettingdailog.hpp
         subtitlsplicingwidget.cc subtitlsplicingwidget.hpp
         validator.cc validator.hpp)
