[升级Qt版本至6.4.2并引入GIF编码功能]: 此提交对项目进行了以下主要更新：
1. **Qt版本升级**: 将Qt版本从6.4.0升级至6.4.2，这一改动反映在`cmake.yml`、`qmake.yml`和`CMakeLists.txt`文件中，确保跨平台构建环境的一致性。

2. **引入GIF编码功能**:
   - 在`3rdparty`目录下新增了`gif`模块，包括`egif`目录中的`GifEncoder`类和`NeuQuant`类的实现，用于高效生成高质量的GIF动画。
   - `GifEncoder`类采用Neural-Net量化算法，支持将多帧图像编码为GIF格式，并允许用户设置质量、循环次数等参数。
   - 在`CMakeLists.txt`中添加了对新`gif`模块的引用，确保了在项目构建过程中包含GIF编码功能。
   - 更新了`3rdparty.pri`和`3rdparty.pro`文件，将GIF相关库的路径和依赖项集成到项目中。

3. **完善多语言支持**:
   - 新增了`README.md`文件，提供了简体中文和英文的README链接，方便不同语言用户查阅项目文档。

4. **优化代码结构**:
   - 重构了`RecordGifThread`类，支持在`RecordWidget`中启动和停止GIF录制，提供了更灵活的录制控制。
   - 更新了`RecordWidget`类，增加了启动和停止录制的槽函数，以及相关的UI更新。

5. **修复和改进**:
   - 修复了`Utils::grabFullWindow`函数在Qt6下的问题，确保在高DPI环境下能够正确捕获屏幕图像。
   - 优化了`SelectionWidget`类，改进了鼠标事件的处理，提升了选择框的交互体验。

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -52,7 +52,7 @@ jobs:
           choco install ninja
           ninja --version
           cmake --version
-          vcpkg install breakpad --triplet x64-windows
+          vcpkg install breakpad giflib --triplet x64-windows
       - name: Install dependencies on macos
         if: startsWith(matrix.os, 'macos')
         run: |
@@ -60,7 +60,7 @@ jobs:
           ninja --version
           cmake --version
           clang --version
-          vcpkg install breakpad --triplet x64-osx
+          vcpkg install breakpad giflib --triplet x64-osx
       - name: Install dependencies on ubuntu
         if: startsWith(matrix.os, 'ubuntu')
         run: |
@@ -68,7 +68,7 @@ jobs:
           ninja --version
           cmake --version
           gcc --version
-          vcpkg install breakpad --triplet x64-linux
+          vcpkg install breakpad giflib --triplet x64-linux
 
       - name: Install Qt
         uses: jurplel/install-qt-action@v3
