--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,10 @@ find_package(unofficial-breakpad CONFIG REQUIRED)
 if(unofficial-breakpad_FOUND)
   message(STATUS "found unofficial-breakpad")
 endif()
+find_package(GIF REQUIRED)
+if(GIF_FOUND)
+  message(STATUS "found GIF")
+endif()
 
 add_subdirectory(utils)
 add_subdirectory(3rdparty)
