[更新Qt版本至6.4.2并优化GIF录制功能]: 这个提交主要做了两件事：更新了Qt的版本，并优化了GIF录制的功能。
1. **更新Qt版本**: 将Qt的版本从6.4.0更新至6.4.2。这一改动反映在了`cmake.yml`、`qmake.yml`和`CMakeLists.txt`文件中，确保了所有平台和构建系统使用的新Qt版本一致。

2. **优化GIF录制功能**:
   - 在`RecordGifThread`类中，重构了GIF编码的逻辑，将原本分开的`encode1`和`encode2`函数合并，并引入了新的编码策略。
   - `encode1`现在使用`GifEncoder`来创建GIF，并通过调用`push`和`finish`函数来处理图像数据。
   - `encode2`被重写，现在使用`GifWriter`来创建GIF，同样通过调用`push`和`finish`函数来处理图像数据。
   - 引入了新的方法`encode1`和`encode2`，它们在`RecordGifThread`的上下文中被调用，允许在录制过程中动态地开始和结束编码过程。
   - 调整了`main.cpp`中的代码，以适应Qt版本的变化，并确保在Windows上正确设置高DPI缩放策略。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ ELSEIF (CMAKE_HOST_UNIX)
     set(CMAKE_TOOLCHAIN_FILE "/usr/local/share/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "Vcpkg toolchain file")
 ENDIF ()
 
-list(APPEND CMAKE_PREFIX_PATH "C:\\Qt\\6.4.0\\msvc2019_64")
+IF (CMAKE_HOST_WIN32)
+    list(APPEND CMAKE_PREFIX_PATH "C:\\Qt\\6.4.2\\msvc2019_64")
+ENDIF ()
 
 project(Qt-Ffmpeg VERSION 0.1 LANGUAGES CXX)
 
