--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,18 +4,18 @@ on:
   # push代码时触发workflow
   push:
     paths-ignore: # 下列文件的变更不触发部署，可以自行添加
-        - 'LICENSE'
+        - 'doc'
+        - '.clang-format'
         - '.gitignore'
-        - 'README.md'
-        - 'translations/**'
-        - 'docs/**'
+        - 'LICENSE'
+        - 'README*'
   pull_request:
     paths-ignore: # 下列文件的变更不触发部署，可以自行添加
-        - 'LICENSE'
+        - 'doc'
+        - '.clang-format'
         - '.gitignore'
-        - 'README.md'
-        - 'translations/**'
-        - 'docs/**'
+        - 'LICENSE'
+        - 'README*'
 
 jobs:
   build:
@@ -29,7 +29,7 @@ jobs:
           - macos-latest
           - ubuntu-latest
         qt_ver: 
-          - 6.4.2
+          - 6.5.0
         build_type:
           - "Release"
         generators:
