[添加OpenGL图像查看器并改进项目配置]: 这个提交引入了一个新的OpenGL图像查看器，并在项目配置和工具链设置方面做了改进。
- 通过引入`openglgraphics`模块，添加了基于OpenGL的图像查看功能，提高了图像处理的性能和用户体验。
- 在`CMakeLists.txt`中，为`openglgraphics`模块和其他模块配置了相应的源文件和依赖，以确保正确构建。
- 更新了`Qt-Graphics.pro`文件，将`openglgraphics`模块包含在项目中。
- 在`README.md`中，添加了有关OpenGL查看器的描述和截图，提供了用户界面的预览。
- 对`utils`模块进行了更新，改进了文件大小转换函数`convertBytesToString`，使其更加精确和易于维护。
- 调整了`mainwindow`模块，添加了新的`OpenglViewer`类，并通过`CMakeLists.txt`和`.pro`文件进行了相应的配置。
- 在`app`模块中，更新了`main.cpp`和`app.pro`文件，以集成新的OpenGL查看器并保持与项目其他部分的兼容性。
- 更新了`graphics`模块，移除了不再需要的`crashhandler`模块引用，并添加了对新`openglgraphics`模块的引用。
- 通过删除旧的`crashhandler`模块文件并添加新的`openglgraphics`模块文件，保持了项目结构的清晰和组织。

--- a/mainwindow/CMakeLists.txt
+++ b/mainwindow/CMakeLists.txt
@@ -1,31 +1,61 @@
 set(PROJECT_SOURCES
-        capturewidget.cc capturewidget.hpp
-        customlineitem.cc customlineitem.hpp
-        drawscene.cc drawscene.hpp
-        drawwidget.cpp drawwidget.h
-        imagecaptureview.cc imagecaptureview.hpp
-        imagelistmodel.cpp imagelistmodel.h
-        imageviewer.cpp imageviewer.h
-        listiitemview.cc listiitemview.hpp
-        mainwindow_global.h
-        mainwindow.cpp mainwindow.h
-        maskdialog.cpp maskdialog.h
-        recordgifthread.cc recordgifthread.hpp
-        recordwidget.cc recordwidget.hpp
-        rounddialog.cc rounddialog.hpp
-        sectionalsubtitlesview.cc sectionalsubtitlesview.hpp
-        selectionwidget.cc selectionwidget.hpp
-        stretchparamssettingdailog.cc stretchparamssettingdailog.hpp
-        subtitlsplicingwidget.cc subtitlsplicingwidget.hpp
-        validator.cc validator.hpp)
+    capturewidget.cc
+    capturewidget.hpp
+    customlineitem.cc
+    customlineitem.hpp
+    drawscene.cc
+    drawscene.hpp
+    drawwidget.cpp
+    drawwidget.h
+    imagecaptureview.cc
+    imagecaptureview.hpp
+    imagelistmodel.cpp
+    imagelistmodel.h
+    imageviewer.cpp
+    imageviewer.h
+    listiitemview.cc
+    listiitemview.hpp
+    mainwindow_global.h
+    mainwindow.cpp
+    mainwindow.h
+    maskdialog.cpp
+    maskdialog.h
+    openglviewer.cc
+    openglviewer.hpp
+    recordgifthread.cc
+    recordgifthread.hpp
+    recordwidget.cc
+    recordwidget.hpp
+    rounddialog.cc
+    rounddialog.hpp
+    sectionalsubtitlesview.cc
+    sectionalsubtitlesview.hpp
+    selectionwidget.cc
+    selectionwidget.hpp
+    stretchparamssettingdailog.cc
+    stretchparamssettingdailog.hpp
+    subtitlsplicingwidget.cc
+    subtitlsplicingwidget.hpp
+    validator.cc
+    validator.hpp
+    viewer.cc
+    viewer.hpp)
 
-if (CMAKE_HOST_WIN32)
+if(CMAKE_HOST_WIN32)
   add_library(mainwindow SHARED ${PROJECT_SOURCES} ${SOURCES})
-else ()
+else()
   add_library(mainwindow ${PROJECT_SOURCES} ${SOURCES})
-endif ()
-target_link_libraries(mainwindow PRIVATE Qt6::Widgets Qt6::Concurrent utils graphics egif)
+endif()
+target_link_libraries(
+  mainwindow
+  PRIVATE Qt6::Widgets
+          Qt6::Concurrent
+          Qt6::OpenGLWidgets
+          utils
+          graphics
+          openglgraphics
+          egif)
 
-if (CMAKE_HOST_WIN32)
+if(CMAKE_HOST_WIN32)
   target_compile_definitions(mainwindow PRIVATE "MAINWINDOW_LIBRARY")
 endif()
