--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,32 @@
 cmake_minimum_required(VERSION 3.16)
 
-IF (CMAKE_HOST_WIN32)
-    set(CMAKE_TOOLCHAIN_FILE "C:/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "Vcpkg toolchain file")
-ELSEIF (CMAKE_HOST_APPLE)
-    set(CMAKE_TOOLCHAIN_FILE "/usr/local/share/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "Vcpkg toolchain file")
-ELSEIF (CMAKE_HOST_UNIX)
-    set(CMAKE_TOOLCHAIN_FILE "/usr/local/share/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "Vcpkg toolchain file")
-ENDIF ()
+if(CMAKE_HOST_WIN32)
+  set(CMAKE_TOOLCHAIN_FILE
+      "C:/vcpkg/scripts/buildsystems/vcpkg.cmake"
+      CACHE STRING "Vcpkg toolchain file")
+elseif(CMAKE_HOST_APPLE)
+  set(CMAKE_TOOLCHAIN_FILE
+      "/usr/local/share/vcpkg/scripts/buildsystems/vcpkg.cmake"
+      CACHE STRING "Vcpkg toolchain file")
+elseif(CMAKE_HOST_UNIX)
+  set(CMAKE_TOOLCHAIN_FILE
+      "/usr/local/share/vcpkg/scripts/buildsystems/vcpkg.cmake"
+      CACHE STRING "Vcpkg toolchain file")
+endif()
 
-IF (CMAKE_HOST_WIN32)
-    list(APPEND CMAKE_PREFIX_PATH "C:\\Qt\\6.5.0\\msvc2019_64")
-ENDIF ()
+if(CMAKE_HOST_WIN32)
+  list(APPEND CMAKE_PREFIX_PATH "C:\\Qt\\6.5.0\\msvc2019_64")
+endif()
 
-project(Qt-Ffmpeg VERSION 0.1 LANGUAGES CXX)
+project(
+  Qt-Ffmpeg
+  VERSION 0.1
+  LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
-#qt_standard_project_setup() 这个识别不了
+# qt_standard_project_setup() 这个识别不了
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -31,35 +40,41 @@ set(CMAKE_DEBUG_POSTFIX d)
 
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
   message("Setting build type to 'RelWithDebInfo' as none was specified.")
-  set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose the type of build." FORCE)
+  set(CMAKE_BUILD_TYPE
+      RelWithDebInfo
+      CACHE STRING "Choose the type of build." FORCE)
   # Set the possible values of build type for cmake-gui
   set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release"
-    "MinSizeRel" "RelWithDebInfo")
+                                               "MinSizeRel" "RelWithDebInfo")
 endif()
 
 if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-    set(CURRENT_PLATFORM "-64")
+  set(CURRENT_PLATFORM "-64")
 else()
-    set(CURRENT_PLATFORM "-32")
+  set(CURRENT_PLATFORM "-32")
 endif()
 
 message(STATUS "Current Platform is ${CURRENT_PLATFORM}")
 
-#设定可执行二进制文件的目录
-SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin${CURRENT_PLATFORM}/${CMAKE_BUILD_TYPE})  #源文件目录
-#SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)     #输出文件目录
+# 设定可执行二进制文件的目录
+set(EXECUTABLE_OUTPUT_PATH
+    ${PROJECT_SOURCE_DIR}/bin${CURRENT_PLATFORM}/${CMAKE_BUILD_TYPE}) # 源文件目录
+# SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)     #输出文件目录
 
-#设定存放编译出来的库文件的目录
-SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin${CURRENT_PLATFORM}/${CMAKE_BUILD_TYPE})
-#SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
+# 设定存放编译出来的库文件的目录
+set(LIBRARY_OUTPUT_PATH
+    ${PROJECT_SOURCE_DIR}/bin${CURRENT_PLATFORM}/${CMAKE_BUILD_TYPE})
+# SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 
-#并且把该目录设为连接目录
-LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/bin${CURRENT_PLATFORM}/${CMAKE_BUILD_TYPE})
-#LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
+# 并且把该目录设为连接目录
+link_directories(
+  ${PROJECT_SOURCE_DIR}/bin${CURRENT_PLATFORM}/${CMAKE_BUILD_TYPE})
+# LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
 
-include_directories( ${PROJECT_SOURCE_DIR} )
+include_directories(${PROJECT_SOURCE_DIR})
 
-find_package(Qt6 REQUIRED COMPONENTS Widgets Network Core5Compat Concurrent)
+find_package(Qt6 REQUIRED COMPONENTS Widgets Network Core5Compat Concurrent
+                                     OpenGLWidgets)
 
 find_package(unofficial-breakpad CONFIG REQUIRED)
 if(unofficial-breakpad_FOUND)
@@ -74,5 +89,6 @@ add_subdirectory(utils)
 add_subdirectory(3rdparty)
 add_subdirectory(crashhandler)
 add_subdirectory(graphics)
+add_subdirectory(openglgraphics)
 add_subdirectory(mainwindow)
 add_subdirectory(app)
