[改进代码风格和增强Qt模块化]: 本次提交对项目代码风格进行了统一和改进，并增强了Qt模块化处理。
- 引入了`.clang-tidy`文件，制定了一套编码规范，包括但不限于命名规则、性能、现代性、可读性、安全性等，以提高代码质量。
- 更新了`.github/workflows`目录下的多个工作流文件，如`cmake.yml`、`qmake.yml`等，调整了Qt版本至6.5.2，并优化了构建配置。
- 对`3rdparty`目录下的多个模块进行了修改，如`gif`、`qtlockedfile`、`qtsingleapplication`等，通过引入`add_custom_library`函数来统一库的创建方式，增强了模块化。
- 针对`CMakeLists.txt`文件进行了优化，统一了库的输出路径，并引入了之前删除的`add_custom_library`函数。
- 删除了`crashhandler`模块，并将其中的`breakpad`相关功能迁移到`3rdparty`模块中，简化了项目结构。
- 更新了`openglgraphics`模块到`gpugraphics`，调整了相关代码和CMake配置，以适应新的模块化设计。
- 针对`utils`模块，进行了代码优化和功能更新，如`FileUtil`、`HostOsInfo`等类的增强。

--- a/.github/workflows/qmake.yml
+++ b/.github/workflows/qmake.yml
@@ -89,4 +89,4 @@ jobs:
         if: startsWith(matrix.os, 'macos') || startsWith(matrix.os, 'ubuntu')
         run: |
           qmake
-          make
+          make -j4
