[更新Qt版本和模块依赖项]: 针对项目中多个模块的CMakeLists.txt进行了更新，主要包括以下更改：
- 将Qt版本从6.5.0更新至6.5.2，并在`cmake.yml`和`CMakeLists.txt`文件中做了相应调整。
- 为`egif`、`shared_qtlockedfile`、`shared_qtsingleapplication`、`crashhandler`、`graphics`、`openglgraphics`和`utils`等模块添加了`add_custom_library`函数调用，以统一库的创建方式。
- 对`CMakeLists.txt`中一些条件判断由`if(WIN32)`更改为`if(CMAKE_HOST_WIN32)`，以提高跨平台兼容性。
- 移除了一些不必要的条件判断和重复代码，简化了构建配置。
- 更新了`CMakeLists.txt`中的库输出路径设置，现在统一使用`LIBRARY_OUTPUT_PATH`变量。
- 为`openglgraphics`模块的`CMakeLists.txt`移除了不必要的条件判断，并简化了库的创建。
- 为`utils`模块的`CMakeLists.txt`进行了类似的更新，使用`add_custom_library`函数，并统一了编译定义。

--- a/graphics/CMakeLists.txt
+++ b/graphics/CMakeLists.txt
@@ -1,25 +1,33 @@
 set(PROJECT_SOURCES
-        basicgraphicsitem.cpp basicgraphicsitem.h
-        graphics_global.h
-        graphics.cpp graphics.h
-        graphicsarcitem.cpp graphicsarcitem.h
-        graphicscircleitem.cpp graphicscircleitem.h
-        graphicslineitem.cpp graphicslineitem.h
-        graphicspixmapitem.cpp graphicspixmapitem.h
-        graphicspolygonitem.cpp graphicspolygonitem.h
-        graphicsrectitem.cpp graphicsrectitem.h
-        graphicsringitem.cpp graphicsringitem.h
-        graphicsrotatedrectitem.cpp graphicsrotatedrectitem.h
-        graphicstextitem.cc graphicstextitem.hpp
-        imageview.cpp imageview.h)
+    basicgraphicsitem.cpp
+    basicgraphicsitem.h
+    graphics_global.h
+    graphics.cpp
+    graphics.h
+    graphicsarcitem.cpp
+    graphicsarcitem.h
+    graphicscircleitem.cpp
+    graphicscircleitem.h
+    graphicslineitem.cpp
+    graphicslineitem.h
+    graphicspixmapitem.cpp
+    graphicspixmapitem.h
+    graphicspolygonitem.cpp
+    graphicspolygonitem.h
+    graphicsrectitem.cpp
+    graphicsrectitem.h
+    graphicsringitem.cpp
+    graphicsringitem.h
+    graphicsrotatedrectitem.cpp
+    graphicsrotatedrectitem.h
+    graphicstextitem.cc
+    graphicstextitem.hpp
+    imageview.cpp
+    imageview.h)
 
-if (CMAKE_HOST_WIN32)
-  add_library(graphics SHARED ${PROJECT_SOURCES} ${SOURCES})
-else ()
-  add_library(graphics ${PROJECT_SOURCES} ${SOURCES})
-endif ()
+add_custom_library(graphics ${PROJECT_SOURCES})
 target_link_libraries(graphics PRIVATE Qt6::Widgets)
 
-if (CMAKE_HOST_WIN32)
+if(CMAKE_HOST_WIN32)
   target_compile_definitions(graphics PRIVATE "GRAPHICS_LIBRARY")
 endif()
