--- a/3rdparty/gif/egif/CMakeLists.txt
+++ b/3rdparty/gif/egif/CMakeLists.txt
@@ -1,14 +1,8 @@
-set(PROJECT_SOURCES
-      GifEncoder.cpp GifEncoder.h
-      NeuQuant.cpp NeuQuant.h)
+set(PROJECT_SOURCES GifEncoder.cpp GifEncoder.h NeuQuant.cpp NeuQuant.h)
 
-if (CMAKE_HOST_WIN32)
-  add_library(egif SHARED ${PROJECT_SOURCES})
-else ()
-  add_library(egif ${PROJECT_SOURCES})
-endif ()
+add_custom_library(egif ${PROJECT_SOURCES})
 target_link_libraries(egif PRIVATE GIF::GIF Qt6::Widgets)
 
-if (CMAKE_HOST_WIN32)
+if(CMAKE_HOST_WIN32)
   target_compile_definitions(egif PRIVATE "THRIDPARTY_LIBRARY" _UNICODE UNICODE)
 endif()
