--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,11 @@ elseif(CMAKE_HOST_UNIX)
 endif()
 
 if(CMAKE_HOST_WIN32)
-  list(APPEND CMAKE_PREFIX_PATH "C:\\Qt\\6.5.0\\msvc2019_64")
+  list(APPEND CMAKE_PREFIX_PATH "C:\\Qt\\6.5.2\\msvc2019_64")
+elseif(CMAKE_HOST_APPLE)
+
+elseif(CMAKE_HOST_UNIX)
+  list(APPEND CMAKE_PREFIX_PATH "/opt/Qt/6.5.2/gcc_64")
 endif()
 
 project(
@@ -59,17 +63,10 @@ message(STATUS "Current Platform is ${CURRENT_PLATFORM}")
 # 设定可执行二进制文件的目录
 set(EXECUTABLE_OUTPUT_PATH
     ${PROJECT_SOURCE_DIR}/bin${CURRENT_PLATFORM}/${CMAKE_BUILD_TYPE}) # 源文件目录
-# SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)     #输出文件目录
-
 # 设定存放编译出来的库文件的目录
-set(LIBRARY_OUTPUT_PATH
-    ${PROJECT_SOURCE_DIR}/bin${CURRENT_PLATFORM}/${CMAKE_BUILD_TYPE})
-# SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
-
+set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin${CURRENT_PLATFORM}/libs)
 # 并且把该目录设为连接目录
-link_directories(
-  ${PROJECT_SOURCE_DIR}/bin${CURRENT_PLATFORM}/${CMAKE_BUILD_TYPE})
-# LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
+link_directories(${LIBRARY_OUTPUT_PATH})
 
 include_directories(${PROJECT_SOURCE_DIR})
 
@@ -84,6 +81,20 @@ find_package(GIF REQUIRED)
 if(GIF_FOUND)
   message(STATUS "found GIF")
 endif()
+
+function(add_custom_library target_name)
+  if(CMAKE_HOST_WIN32)
+    add_library(${target_name} SHARED ${ARGN})
+    add_custom_command(
+      TARGET ${target_name}
+      POST_BUILD
+      COMMAND
+        ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:${target_name}>
+        ${EXECUTABLE_OUTPUT_PATH}/$<TARGET_FILE_NAME:${target_name}>)
+  else()
+    add_library(${target_name} ${ARGN})
+  endif()
+endfunction(add_custom_library)
 
 add_subdirectory(utils)
 add_subdirectory(3rdparty)
