[重构项目结构以及升级Qt版本]: 对项目进行了一系列的重构和更新，主要包括Qt版本升级、模块调整、代码清理和性能优化。
- 升级Qt版本至6.6.1，并相应更新了模块依赖。
- 删除了`crashhandler`模块，并将`breakpad`相关功能迁移到`3rdparty`模块中。
- 新增`gpugraphics`模块，用以替代原有的`openglgraphics`模块。
- 更新了`CMakeLists.txt`文件，优化构建配置和依赖管理。
- 重命名和移动了一些文件，如`breakpad.cc`和`breakpad.hpp`从`crashhandler`移动到`3rdparty`。
- 清理和删除了不再使用的代码和资源文件。
- 更新了`.clang-tidy`文件，调整了代码风格和检查选项。
- 添加了新的GitHub Actions工作流，包括缓存清理和工作流运行清理。
- 更新了`README.md`和相关文档，以反映项目结构和代码库的变更。

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,14 +4,24 @@ on:
   # push代码时触发workflow
   push:
     paths-ignore: # 下列文件的变更不触发部署，可以自行添加
-        - 'doc'
+        - '.github/workflows/clean_cache.yml'
+        - '.github/workflows/delete_workflow.yml'
+        - '.github/workflows/qmake.yml'
+        - '.github/workflows/readme.yml'
+        - '.github/workflows/toolchain.yml'
+        - 'doc/**'
         - '.clang-format'
         - '.gitignore'
         - 'LICENSE'
         - 'README*'
   pull_request:
     paths-ignore: # 下列文件的变更不触发部署，可以自行添加
-        - 'doc'
+        - '.github/workflows/clean_cache.yml'
+        - '.github/workflows/delete_workflow.yml'
+        - '.github/workflows/qmake.yml'
+        - '.github/workflows/readme.yml'
+        - '.github/workflows/toolchain.yml'
+        - 'doc/**'
         - '.clang-format'
         - '.gitignore'
         - 'LICENSE'
@@ -29,30 +39,35 @@ jobs:
           - macos-latest
           - ubuntu-latest
         qt_ver: 
-          - 6.5.2
+          - 6.6.1
         build_type:
           - "Release"
         generators:
           - "Ninja"
+        libs: 
+          - breakpad giflib
 
     steps:
-      - name: cache vcpkg
-        uses: actions/cache@v3
-        with:
-          path: |
-            C:\vcpkg\installed
-            /usr/local/share/vcpkg/installed
-          key: ${{ runner.os }}-vcpkg-installed-${{ matrix.os }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-vcpkg-installed-${{ matrix.os }}-
-            ${{ runner.os }}-vcpkg-installed-
+      - name: Restore windows vcpkg
+        if: startsWith(matrix.os, 'windows')
+        uses: actions/cache/restore@v3
+        with: 
+          path: C:\vcpkg\installed
+          key: ${{ runner.os }}-vcpkg-installed-${{ matrix.os }}
+      - name: Restore macos or ubuntu vcpkg
+        if: startsWith(matrix.os, 'macos') || startsWith(matrix.os, 'ubuntu')
+        uses: actions/cache/restore@v3
+        with: 
+          path: /usr/local/share/vcpkg/installed
+          key: ${{ runner.os }}-vcpkg-installed-${{ matrix.os }}
+
       - name: Install dependencies on windows
         if: startsWith(matrix.os, 'windows')
         run: |
           choco install ninja
           ninja --version
           cmake --version
-          vcpkg install breakpad giflib --triplet x64-windows
+          vcpkg install ${{ matrix.libs }} --triplet x64-windows
       - name: Install dependencies on macos
         if: startsWith(matrix.os, 'macos')
         run: |
@@ -60,7 +75,7 @@ jobs:
           ninja --version
           cmake --version
           clang --version
-          vcpkg install breakpad giflib --triplet x64-osx
+          vcpkg install ${{ matrix.libs }} --triplet x64-osx
       - name: Install dependencies on ubuntu
         if: startsWith(matrix.os, 'ubuntu')
         run: |
@@ -68,35 +83,39 @@ jobs:
           ninja --version
           cmake --version
           gcc --version
-          vcpkg install breakpad giflib --triplet x64-linux
+          vcpkg install ${{ matrix.libs }} --triplet x64-linux
 
       - name: Install Qt
         uses: jurplel/install-qt-action@v3
         with:
           version: ${{ matrix.qt_ver }}
           install-deps: 'true'
-          modules: 'qt5compat addons.qtnetworkauth addons.qtimageformats'
+          modules: 'qt5compat qtnetworkauth qtimageformats'
           cache: 'true'
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
-      - name: Configure Windows
+      - name: Enable Developer Command Prompt
         if: startsWith(matrix.os, 'windows')
-        env:
-          CMAKE_PREFIX_PATH: ${{env.Qt6_Dir}}
+        uses: ilammy/msvc-dev-cmd@v1.12.1
+        with:
+          arch: amd64
+      - name: Configure windows
+        if: startsWith(matrix.os, 'windows')
         shell: bash
         run: |
           cmake \
             -S . \
             -B ./build \
-            -A x64 \
+            -DCMAKE_C_COMPILER=cl \
+            -DCMAKE_CXX_COMPILER=cl \
+            -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+            -G "${{ matrix.generators }}" \
             -DCMAKE_INSTALL_PREFIX:PATH=instdir
       - name: Configure macos or ubuntu
         if: startsWith(matrix.os, 'macos') || startsWith(matrix.os, 'ubuntu')
-        env:
-          CMAKE_PREFIX_PATH: ${{env.Qt6_Dir}}
         shell: bash
         run: |
           cmake \
