--- a/.github/workflows/qmake.yml
+++ b/.github/workflows/qmake.yml
@@ -4,14 +4,24 @@ on:
   # push代码时触发workflow
   push:
     paths-ignore: # 下列文件的变更不触发部署，可以自行添加
-        - 'doc'
+        - '.github/workflows/clean_cache.yml'
+        - '.github/workflows/delete_workflow.yml'
+        - '.github/workflows/cmake.yml'
+        - '.github/workflows/readme.yml'
+        - '.github/workflows/toolchain.yml'
+        - 'doc/**'
         - '.clang-format'
         - '.gitignore'
         - 'LICENSE'
         - 'README*'
   pull_request:
     paths-ignore: # 下列文件的变更不触发部署，可以自行添加
-        - 'doc'
+        - '.github/workflows/clean_cache.yml'
+        - '.github/workflows/delete_workflow.yml'
+        - '.github/workflows/cmake.yml'
+        - '.github/workflows/readme.yml'
+        - '.github/workflows/toolchain.yml'
+        - 'doc/**'
         - '.clang-format'
         - '.gitignore'
         - 'LICENSE'
@@ -29,26 +39,31 @@ jobs:
           - macos-latest
           - ubuntu-latest
         qt_ver: 
-          - 6.5.2
+          - 6.6.1
+        libs: 
+          - breakpad giflib
 
     steps:
-      - name: cache vcpkg
-        uses: actions/cache@v3
-        with:
-          path: |
-            C:\vcpkg\installed
-            /usr/local/share/vcpkg/installed
-          key: ${{ runner.os }}-vcpkg-installed-${{ matrix.os }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-vcpkg-installed-${{ matrix.os }}-
-            ${{ runner.os }}-vcpkg-installed-
+      - name: Restore windows vcpkg
+        if: startsWith(matrix.os, 'windows')
+        uses: actions/cache/restore@v3
+        with: 
+          path: C:\vcpkg\installed
+          key: ${{ runner.os }}-vcpkg-installed-${{ matrix.os }}
+      - name: Restore macos or ubuntu vcpkg
+        if: startsWith(matrix.os, 'macos') || startsWith(matrix.os, 'ubuntu')
+        uses: actions/cache/restore@v3
+        with: 
+          path: /usr/local/share/vcpkg/installed
+          key: ${{ runner.os }}-vcpkg-installed-${{ matrix.os }}
+
       - name: Install dependencies on windows
         if: startsWith(matrix.os, 'windows')
         run: |
           choco install ninja
           ninja --version
           cmake --version
-          vcpkg install breakpad giflib --triplet x64-windows
+          vcpkg install ${{ matrix.libs }} --triplet x64-windows
       - name: Install dependencies on macos
         if: startsWith(matrix.os, 'macos')
         run: |
@@ -56,7 +71,7 @@ jobs:
           ninja --version
           cmake --version
           clang --version
-          vcpkg install breakpad giflib --triplet x64-osx
+          vcpkg install ${{ matrix.libs }} --triplet x64-osx
       - name: Install dependencies on ubuntu
         if: startsWith(matrix.os, 'ubuntu')
         run: |
@@ -64,17 +79,17 @@ jobs:
           ninja --version
           cmake --version
           gcc --version
-          vcpkg install breakpad giflib --triplet x64-linux
+          vcpkg install ${{ matrix.libs }} --triplet x64-linux
 
       - name: Install Qt
         uses: jurplel/install-qt-action@v3
         with:
           version: ${{ matrix.qt_ver }}
           install-deps: 'true'
-          modules: 'qt5compat addons.qtnetworkauth addons.qtimageformats'
+          modules: 'qt5compat qtnetworkauth qtimageformats'
           cache: 'true'
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
