--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,15 @@ elseif(CMAKE_HOST_UNIX)
       CACHE STRING "Vcpkg toolchain file")
 endif()
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+include(utils)
+
 if(CMAKE_HOST_WIN32)
-  list(APPEND CMAKE_PREFIX_PATH "C:\\Qt\\6.5.2\\msvc2019_64")
+  list(APPEND CMAKE_PREFIX_PATH "C:\\Qt\\6.6.1\\msvc2019_64")
 elseif(CMAKE_HOST_APPLE)
 
 elseif(CMAKE_HOST_UNIX)
-  list(APPEND CMAKE_PREFIX_PATH "/opt/Qt/6.5.2/gcc_64")
+  list(APPEND CMAKE_PREFIX_PATH "/opt/Qt/6.6.1/gcc_64")
 endif()
 
 project(
@@ -82,24 +85,9 @@ if(GIF_FOUND)
   message(STATUS "found GIF")
 endif()
 
-function(add_custom_library target_name)
-  if(CMAKE_HOST_WIN32)
-    add_library(${target_name} SHARED ${ARGN})
-    add_custom_command(
-      TARGET ${target_name}
-      POST_BUILD
-      COMMAND
-        ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:${target_name}>
-        ${EXECUTABLE_OUTPUT_PATH}/$<TARGET_FILE_NAME:${target_name}>)
-  else()
-    add_library(${target_name} ${ARGN})
-  endif()
-endfunction(add_custom_library)
-
 add_subdirectory(utils)
 add_subdirectory(3rdparty)
-add_subdirectory(crashhandler)
+add_subdirectory(gpugraphics)
 add_subdirectory(graphics)
-add_subdirectory(openglgraphics)
 add_subdirectory(mainwindow)
 add_subdirectory(app)
