[添加Vulkan图形渲染支持]：引入Vulkan图形渲染框架，更新依赖和示例工程
- 在`action.yml`中添加了安装Vulkan SDK的步骤
- `CMakeLists.txt`文件更新了`find_package`以包含`Qt6::Gui`模块，并添加了对Vulkan的查找
- `README.md`中新增了`QVulkanWindow`相关的编译和旋转问题的文档说明
- `examples/graphics/CMakeLists.txt`和`graphics.pro`中添加了新文件`vulkanviewer.cc`和`vulkanviewer.hpp`，并更新了链接库
- `mainwindow.cpp`中新增了对`VulkanViewer`的引用和相关UI组件
- 新增了`vulkanviewer.cc`和`vulkanviewer.hpp`文件，实现了基于Vulkan的图像查看器
- `src/gpugraphics/CMakeLists.txt`中添加了Vulkan相关源文件和资源，并更新了链接库
- `gpugraphics.pro`中添加了Vulkan相关的头文件和源文件
- 更新了`shader.qrc`，添加了Vulkan着色器文件
- 新增了`vulkan.frag`和`vulkan.vert`着色器文件，实现了Vulkan渲染的着色器程序
- 新增了`vulkanrenderer.cc`和`vulkanrenderer.hpp`，实现了Vulkan渲染器
- 新增了`vulkanview.cc`和`vulkanview.hpp`，实现了Vulkan视图窗口

--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -97,3 +97,8 @@ runs:
         version: ${{ inputs.qt_ver }}
         modules: ${{ inputs.qt_modules }}
         cache: 'true'
+
+    - name: Install Vulkan SDK
+      uses: humbletim/install-vulkan-sdk@main
+      with:
+        cache: true        
