[功能增强与构建系统优化]: 引入 Vulkan 支持并对 CMake 配置进行细化
- 细化了 GitHub Actions 工作流，区分了 macOS 和 Ubuntu 的构建条件。
- 在 `CMakeLists.txt` 中新增 `BUILD_VULKAN` 选项，允许用户选择是否编译 Vulkan 相关代码。
- 对示例项目和 GPU 图形模块的 CMake 配置进行了调整，根据 Vulkan 构建选项包含或排除源文件。
- 更新了 Qt 的 `.pro` 文件，为 Windows 平台添加了条件编译定义和源文件。
- 根据 Vulkan 支持更新了主窗口和其他相关类的实现。
- 新增了 `gpudata.hpp` 和 `gpudata.cc` 文件，为 GPU 渲染提供顶点和索引数据。
- 调整了 OpenGL 和 Vulkan 着色器代码，以适应新的数据结构和命名规范。
- 对 Vulkan 渲染器的代码进行了扩展，包括索引缓冲区的创建和管理。
- 更新了着色器文件，以确保它们与 Vulkan 渲染器兼容。

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -55,8 +55,19 @@ jobs:
             -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} `
             -G "${{ matrix.generators }}"
           cmake --build ./build --config ${{ matrix.build_type }}
-      - name: Configure and build on ubuntu or macos
-        if: startsWith(matrix.os, 'ubuntu') || startsWith(matrix.os, 'macos')
+      - name: Configure and build on macos
+        if: startsWith(matrix.os, 'macos')
+        shell: bash
+        run: |
+          cmake \
+            -S . \
+            -B ./build \
+            -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+            -DBUILD_VULKAN=OFF \
+            -G "${{ matrix.generators }}"
+          cmake --build ./build --config ${{ matrix.build_type }}
+      - name: Configure and build on ubuntu
+        if: startsWith(matrix.os, 'ubuntu')
         shell: bash
         run: |
           cmake \
