--- a/src/gpugraphics/CMakeLists.txt
+++ b/src/gpugraphics/CMakeLists.txt
@@ -1,13 +1,10 @@
-set(PROJECT_SOURCES
-    gpugraphics_global.hpp
-    openglshaderprogram.cc
-    openglshaderprogram.hpp
-    openglview.cc
-    openglview.hpp
-    vulkanrenderer.cc
-    vulkanrenderer.hpp
-    vulkanview.cc
-    vulkanview.hpp)
+set(PROJECT_SOURCES gpugraphics_global.hpp openglshaderprogram.cc
+                    openglshaderprogram.hpp openglview.cc openglview.hpp)
+
+if(BUILD_VULKAN)
+  list(APPEND PROJECT_SOURCES vulkanrenderer.cc vulkanrenderer.hpp
+       vulkanview.cc vulkanview.hpp)
+endif()
 
 qt_add_resources(SOURCES shader.qrc)
 
@@ -19,29 +16,31 @@ if(CMAKE_HOST_WIN32)
   target_compile_definitions(gpugraphics PRIVATE "GPUGRAPHICS_LIBRARY")
 endif()
 
-file(GLOB_RECURSE GLSL_SOURCE_FILES "shader/vulkan*")
+if(BUILD_VULKAN)
+  file(GLOB_RECURSE GLSL_SOURCE_FILES "shader/vulkan*")
 
-foreach(GLSL ${GLSL_SOURCE_FILES})
-  get_filename_component(FILE_NAME ${GLSL} NAME)
-  set(SPIRV "${PROJECT_BINARY_DIR}/shaders/vulkan/${FILE_NAME}.spv")
+  foreach(GLSL ${GLSL_SOURCE_FILES})
+    get_filename_component(FILE_NAME ${GLSL} NAME)
+    set(SPIRV "${PROJECT_BINARY_DIR}/shaders/vulkan/${FILE_NAME}.spv")
+    add_custom_command(
+      OUTPUT ${SPIRV}
+      COMMAND ${CMAKE_COMMAND} -E make_directory
+              "${PROJECT_BINARY_DIR}/shaders/vulkan/"
+      COMMAND glslc ${GLSL} -o ${SPIRV}
+      DEPENDS ${GLSL})
+    list(APPEND SPIRV_BINARY_FILES ${SPIRV})
+  endforeach(GLSL)
+
+  add_custom_target(TXShaders DEPENDS ${SPIRV_BINARY_FILES})
+
+  add_dependencies(gpugraphics TXShaders)
+
   add_custom_command(
-    OUTPUT ${SPIRV}
+    TARGET gpugraphics
+    POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E make_directory
-            "${PROJECT_BINARY_DIR}/shaders/vulkan/"
-    COMMAND glslc ${GLSL} -o ${SPIRV}
-    DEPENDS ${GLSL})
-  list(APPEND SPIRV_BINARY_FILES ${SPIRV})
-endforeach(GLSL)
-
-add_custom_target(TXShaders DEPENDS ${SPIRV_BINARY_FILES})
-
-add_dependencies(gpugraphics TXShaders)
-
-add_custom_command(
-  TARGET gpugraphics
-  POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E make_directory
-          "${EXECUTABLE_OUTPUT_PATH}/vulkan_shader/"
-  COMMAND
-    ${CMAKE_COMMAND} -E copy_directory "${PROJECT_BINARY_DIR}/shaders/vulkan"
-    "${EXECUTABLE_OUTPUT_PATH}/vulkan_shader")
+            "${EXECUTABLE_OUTPUT_PATH}/vulkan_shader/"
+    COMMAND
+      ${CMAKE_COMMAND} -E copy_directory "${PROJECT_BINARY_DIR}/shaders/vulkan"
+      "${EXECUTABLE_OUTPUT_PATH}/vulkan_shader")
+endif()
