[更新图形库和增加RHI查看器]: 对图形相关的类和模块进行了重构，并新增了RHI查看器支持。
- 重命名和移动了一些文件，将`imagelistmodel`相关的代码从`graphics`目录移动到了`common`目录下，以实现代码的复用。
- 更新了`AppInfo`的版本信息，从`QVersionNumber`变更为`QString`类型，并且版本号升级到`0.1.1`。
- 修复了`QRhiWidget`中的旋转问题，解决了在旋转任意角度时纹理宽高比变化导致显示不正常的问题。
- 增加了`rhiviewer`模块，用于展示如何使用`QRhi`接口进行图形渲染。
- 更新了`CMakeLists.txt`文件，增加了对新模块的编译支持。
- 增加了对OpenGL和Vulkan的Shader文件编译，使用`qsb`工具生成对应的`.qsb`文件。
- 优化了`OpenglView`和`VulkanRenderer`的资源管理，增加了对空图片的显示支持。

--- a/examples/graphics/CMakeLists.txt
+++ b/examples/graphics/CMakeLists.txt
@@ -1,4 +1,8 @@
 set(PROJECT_SOURCES
+    ../common/viewer.cc
+    ../common/viewer.hpp
+    ../common/imagelistmodel.cpp
+    ../common/imagelistmodel.h
     capturewidget.cc
     capturewidget.hpp
     customlineitem.cc
@@ -9,8 +13,6 @@ set(PROJECT_SOURCES
     drawwidget.h
     imagecaptureview.cc
     imagecaptureview.hpp
-    imagelistmodel.cpp
-    imagelistmodel.h
     imageviewer.cpp
     imageviewer.h
     listiitemview.cc
@@ -35,9 +37,7 @@ set(PROJECT_SOURCES
     stretchparamssettingdailog.cc
     stretchparamssettingdailog.hpp
     subtitlsplicingwidget.cc
-    subtitlsplicingwidget.hpp
-    viewer.cc
-    viewer.hpp)
+    subtitlsplicingwidget.hpp)
 
 if(BUILD_VULKAN)
   list(APPEND PROJECT_SOURCES vulkanviewer.cc vulkanviewer.hpp)
