[重构图形库以引入圆角矩形绘制功能]: 引入了新的`GraphicsRoundedRectItem`类以支持圆角矩形的绘制，并重构了相关类以适应这一新功能。
- 将文档目录从`doc`更名为`docs`，并更新了所有相关的文件引用路径。
- 删除了旧的圆角编辑窗口图片，并新增了`RoundEdit.jpg`图片。
- 更新了`README.md`中的图片引用路径，并修正了图片显示问题。
- 在`Qt-Graphics.pro`中增加了对新文件`docs/**`的包含。
- 重命名和移动了图片文件，从`doc/`到`docs/`，并新增了`RoundEdit.jpg`。
- 在`drawwidget.cpp`中增加了对圆角矩形和旋转矩形的支持。
- 在`maskdialog.cpp`中进行了一些代码改进，使用`auto`关键字简化类型声明。
- 重构了`rounddialog.cc`和`rounddialog.hpp`，使用新的`GraphicsRoundedRectItem`代替了旧的`GraphicsRectItem`，并增加了预览和遮罩功能。
- 更新了`subtitlsplicingwidget.cc`，将图片格式从`ARGB32`改为`RGBA8888_Premultiplied`以保持一致性。
- 在`CMakeLists.txt`中添加了对新组件`graphicsroundedrectitem`的编译指令。
- 在`basicgraphicsitem.cpp`和`basicgraphicsitem.h`中增加了显示边框的选项，并在各类图形项中实现了边框绘制。
- 更新了`graphics.pro`，增加了对新头文件和源文件的包含。
- 在`graphicsarcitem.cpp`、`graphicscircleitem.cpp`、`graphicslineitem.cpp`、`graphicspixmapitem.cpp`、`graphicspolygonitem.cpp`、`graphicsringitem.cpp`和`graphicsrotatedrectitem.cpp`中增加了边框绘制功能。
- 重构了`graphicsrectitem.cpp`和`graphicsrectitem.h`，现在`GraphicsRectItem`继承自`GraphicsRoundedRectItem`，并使用新的圆角矩形实现。
- 新增了`graphicsroundedrectitem.cc`和`graphicsroundedrectitem.hpp`，提供了圆角矩形的实现。

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -3,14 +3,14 @@ name: CMake Build
 on: 
   push:
     paths-ignore:
-        - 'doc/**'
+        - 'docs/**'
         - '.clang-format'
         - '.gitignore'
         - 'LICENSE'
         - 'README*'
   pull_request:
     paths-ignore:
-        - 'doc/**'
+        - 'docs/**'
         - '.clang-format'
         - '.gitignore'
         - 'LICENSE'
