--- a/.github/workflows/qmake.yml
+++ b/.github/workflows/qmake.yml
@@ -3,14 +3,14 @@ name: QMake Build
 on: 
   push:
     paths-ignore:
-        - 'doc/**'
+        - 'docs/**'
         - '.clang-format'
         - '.gitignore'
         - 'LICENSE'
         - 'README*'
   pull_request:
     paths-ignore: 
-        - 'doc/**'
+        - 'docs/**'
         - '.clang-format'
         - '.gitignore'
         - 'LICENSE'
