--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -101,4 +101,5 @@ runs:
     - name: Install Vulkan SDK
       uses: humbletim/install-vulkan-sdk@main
       with:
+        version: 1.3.290.0
         cache: true        
